@@ -3,6 +3,7 @@ gnome-commander 1.2.8.12
 ---------------
 
 Bug fixes:
+ * Fixed problem #640387 (yet another fix for deprecated python modules: md5, sha1)
  * Fixed problem #649375 (bookmarks not updated for newly added ones)
 
 
